Initial rhcloud commit.

--- a/package.json
+++ b/package.json
@@ -1,35 +1,37 @@
 {
-  "name": "OpenShift-Sample-App",
-  "version": "1.0.0",
-  "description": "OpenShift Sample Application",
-  "keywords": [
-    "OpenShift",
-    "Node.js",
-    "application",
-    "openshift"
-  ],
-  "author": {
-    "name": "OpenShift",
-    "email": "ramr@example.org",
-    "url": "http://www.openshift.com/"
+  "name": "calendar-scheduler",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
   },
-  "homepage": "http://www.openshift.com/",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/openshift/origin-server"
+  "dependencies": {
+    "body-parser": "~1.0.0",
+    "cookie-parser": "~1.0.1",
+    "debug": "~0.7.4",
+    "express": "^4.2.0",
+    "express-mongoose": "^0.1.0",
+    "express-session": "^1.5.1",
+    "jade": "~1.3.0",
+    "less-middleware": "^1.0.3",
+    "mongoose": "^3.8.12",
+    "mongoose-fixture": "^0.4.1",
+    "morgan": "~1.0.0",
+    "passport": "^0.2.0",
+    "passport-local": "^1.0.0",
+    "static-favicon": "~1.0.0"
   },
-
+  "devDependencies": {
+    "gulp": "^3.8.2",
+    "gulp-livereload": "^2.1.0",
+    "gulp-mocha": "^0.4.1",
+    "gulp-nodemon": "^1.0.4",
+    "gulp-util": "^2.2.17",
+    "supertest": "^0.13.0"
+  },
   "engines": {
     "node": ">= 0.6.0",
     "npm": ">= 1.0.0"
   },
-
-  "dependencies": {
-    "express": "~3.4.4"
-  },
-  "devDependencies": {},
-  "bundleDependencies": [],
-
-  "private": true,
   "main": "server.js"
 }
