Added angular and angular-ui-router on bower. Added a script for automatic bower install on package.json

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "build-js": "HOME=$HOME/app-root/runtime bower install"
   },
   "dependencies": {
     "body-parser": "~1.0.0",
