--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,8 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "angular-ui-router": "~0.2.10",
+    "angular": "~1.2.19"
   }
 }
