--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "build-js": "HOME=$HOME/app-root/runtime bower install"
+    "postinstall": "export HOME=/var/lib/openshift/[instance-id]/app-root/runtime/repo; ./node_modules/bower/bin/bower install"
   },
   "dependencies": {
     "body-parser": "~1.0.0",
@@ -23,6 +23,7 @@
     "static-favicon": "~1.0.0"
   },
   "devDependencies": {
+    "bower": "^1.3.7",
     "gulp": "^3.8.2",
     "gulp-livereload": "^2.1.0",
     "gulp-mocha": "^0.4.1",
