--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "postinstall": "export HOME=$HOME/app-root/runtime/repo; ./node_modules/bower/bin/bower install && ./node_modules/gulp/bin/gulp build"
+    "postinstall": "export HOME=$HOME/app-root/runtime/repo; ./node_modules/bower/bin/bower install && ./node_modules/gulp/bin/gulp.js build"
   },
   "dependencies": {
     "body-parser": "~1.0.0",
