Added angular to .jshintrc globals.

--- a/.jshintrc
+++ b/.jshintrc
@@ -116,6 +116,9 @@
         //"iLoveDouglas"
     ],
     "globals": {
+      // angular
+      "angular": true,
+
       // mocha
       "describe": false,
       "it": false,
