--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bootstrap": "~3.1.1",
     "angular-ui-router": "~0.2.10",
-    "angular": "~1.2.19"
+    "angular": "~1.2.19",
+    "angular-route": "~1.2.19"
   }
 }
