--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "bootstrap": "~3.1.1",
     "angular-ui-router": "~0.2.10",
     "angular": "~1.2.19",
-    "angular-route": "~1.2.19"
+    "angular-route": "~1.2.19",
+    "angular-cookies": "~1.2.19"
   }
 }
