--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular": "~1.2.19",
     "angular-route": "~1.2.19",
     "angular-cookies": "~1.2.19",
-    "restangular": "~1.4.0"
+    "restangular": "~1.4.0",
+    "angular-bootstrap": "~0.11.0"
   }
 }
