--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.5.1",
     "jade": "~1.3.0",
     "less-middleware": "^1.0.3",
+    "lodash": "^2.4.1",
     "mongoose": "^3.8.12",
     "mongoose-fixture": "^0.4.1",
     "morgan": "~1.0.0",
